--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://khemboom.github.io/happy-marketing",
+  "homepage": "https://thehappymarketing.com/",
   "name": "happy-marketing",
   "version": "0.1.0",
   "private": true,
