--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,1 @@
-RewriteEngine on
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /index.html [L]
+DirectoryIndex index.html
