--- a/package.json
+++ b/package.json
@@ -21,8 +21,6 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -46,7 +44,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.22.5",
-    "gh-pages": "^5.0.0"
+    "@babel/preset-react": "^7.22.5"
   }
 }
