--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://thehappymarketing.com",
+  "homepage": "https://thehappymarketing.agency",
   "name": "happy-marketing",
   "version": "0.1.0",
   "private": true,
